market implied power ratings

--- a/src/schedule-scraper.ipynb
+++ b/src/schedule-scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,21 +36,13 @@
     "options = webdriver.ChromeOptions()\n",
     "driver = webdriver.Chrome(service=service, options=options)\n",
     "url = 'https://rbsdm.com/stats/stats/'\n",
-    "driver.get(url)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "driver.get(url)\n",
     "driver.quit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -59,20 +51,20 @@
        "list"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_html('https://nflgamedata.com/schedule.php?season=2023&week=1')\n",
-    "type(df)"
+    "df_list = pd.read_html('https://nflgamedata.com/schedule.php?season=2023&week=1')\n",
+    "type(df_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +73,7 @@
        "5"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -283,24 +275,19 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "schedule = df[4]\n",
-    "# schedule.columns = schedule.iloc[0]\n",
-    "# schedule = schedule.drop(0)\n",
-    "# df = df.drop(df.columns[columns_to_drop], axis=1)\n",
-    "\n",
-    "# schedule = schedule.drop(columns=[0, 1, 2, 6, 7, 9, 20, 21, 22, 23])\n",
     "schedule.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +376,7 @@
        "      <td>2023-09-10</td>\n",
        "      <td>1:00</td>\n",
        "      <td>CIN</td>\n",
-       "      <td>-2.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>CLE</td>\n",
        "      <td>47.5</td>\n",
@@ -442,7 +429,7 @@
        "      <td>NaN</td>\n",
        "      <td>-6.0</td>\n",
        "      <td>WAS</td>\n",
-       "      <td>40.5</td>\n",
+       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -450,9 +437,9 @@
        "      <td>4:25</td>\n",
        "      <td>GB</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-3.0</td>\n",
+       "      <td>-2.5</td>\n",
        "      <td>CHI</td>\n",
-       "      <td>44.0</td>\n",
+       "      <td>44.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -482,7 +469,7 @@
        "      <td>-4.5</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NE</td>\n",
-       "      <td>46.0</td>\n",
+       "      <td>45.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -523,22 +510,22 @@
        "1  2023-09-07  8:20       DET           NaN          -7.0        KC   54.0\n",
        "2  2023-09-10  1:00       CAR           NaN          -3.0       ATL   42.5\n",
        "3  2023-09-10  1:00       HOU           NaN          -9.5       BAL   44.0\n",
-       "4  2023-09-10  1:00       CIN          -2.0           NaN       CLE   47.5\n",
+       "4  2023-09-10  1:00       CIN          -1.0           NaN       CLE   47.5\n",
        "5  2023-09-10  1:00       JAX          -3.5           NaN       IND   43.5\n",
        "6  2023-09-10  1:00        TB           NaN          -6.5       MIN   45.5\n",
        "7  2023-09-10  1:00       TEN           NaN          -3.0        NO   41.5\n",
        "8  2023-09-10  1:00        SF          -3.0           NaN       PIT   40.5\n",
-       "9  2023-09-10  1:00       ARI           NaN          -6.0       WAS   40.5\n",
-       "10 2023-09-10  4:25        GB           NaN          -3.0       CHI   44.0\n",
+       "9  2023-09-10  1:00       ARI           NaN          -6.0       WAS   40.0\n",
+       "10 2023-09-10  4:25        GB           NaN          -2.5       CHI   44.5\n",
        "11 2023-09-10  4:25        LV           NaN          -4.0       DEN   44.5\n",
        "12 2023-09-10  4:25       MIA           NaN          -2.5       LAC   50.0\n",
-       "13 2023-09-10  4:25       PHI          -4.5           NaN        NE   46.0\n",
+       "13 2023-09-10  4:25       PHI          -4.5           NaN        NE   45.0\n",
        "14 2023-09-10  4:25        LA           NaN          -5.0       SEA   47.5\n",
        "15 2023-09-10  8:20       DAL          -3.0           NaN       NYG   46.5\n",
        "16 2023-09-11  8:15       BUF          -1.5           NaN       NYJ   47.0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,16 +553,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "schedule['spread'] = schedule['away_favored'].fillna(-schedule['home_favored'])"
+    "schedule['spread'] = schedule['away_favored'].fillna(-schedule['home_favored'])\n",
+    "schedule = schedule.drop(columns=['away_favored', 'home_favored', 'date', 'time'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -599,11 +587,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>time</th>\n",
        "      <th>away_team</th>\n",
-       "      <th>away_favored</th>\n",
-       "      <th>home_favored</th>\n",
        "      <th>home_team</th>\n",
        "      <th>total</th>\n",
        "      <th>gametime</th>\n",
@@ -613,11 +597,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2023-09-07</td>\n",
-       "      <td>8:20</td>\n",
        "      <td>DET</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-7.0</td>\n",
        "      <td>KC</td>\n",
        "      <td>54.0</td>\n",
        "      <td>2023-09-07 20:20:00</td>\n",
@@ -625,11 +605,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>1:00</td>\n",
        "      <td>CAR</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-3.0</td>\n",
        "      <td>ATL</td>\n",
        "      <td>42.5</td>\n",
        "      <td>2023-09-10 13:00:00</td>\n",
@@ -637,11 +613,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>1:00</td>\n",
        "      <td>HOU</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-9.5</td>\n",
        "      <td>BAL</td>\n",
        "      <td>44.0</td>\n",
        "      <td>2023-09-10 13:00:00</td>\n",
@@ -649,23 +621,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>1:00</td>\n",
        "      <td>CIN</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>CLE</td>\n",
        "      <td>47.5</td>\n",
        "      <td>2023-09-10 13:00:00</td>\n",
-       "      <td>-2.0</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>1:00</td>\n",
        "      <td>JAX</td>\n",
-       "      <td>-3.5</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>IND</td>\n",
        "      <td>43.5</td>\n",
        "      <td>2023-09-10 13:00:00</td>\n",
@@ -673,11 +637,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>1:00</td>\n",
        "      <td>TB</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-6.5</td>\n",
        "      <td>MIN</td>\n",
        "      <td>45.5</td>\n",
        "      <td>2023-09-10 13:00:00</td>\n",
@@ -685,11 +645,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>1:00</td>\n",
        "      <td>TEN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-3.0</td>\n",
        "      <td>NO</td>\n",
        "      <td>41.5</td>\n",
        "      <td>2023-09-10 13:00:00</td>\n",
@@ -697,11 +653,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>1:00</td>\n",
        "      <td>SF</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>PIT</td>\n",
        "      <td>40.5</td>\n",
        "      <td>2023-09-10 13:00:00</td>\n",
@@ -709,35 +661,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>1:00</td>\n",
        "      <td>ARI</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-6.0</td>\n",
        "      <td>WAS</td>\n",
-       "      <td>40.5</td>\n",
+       "      <td>40.0</td>\n",
        "      <td>2023-09-10 13:00:00</td>\n",
        "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>4:25</td>\n",
        "      <td>GB</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-3.0</td>\n",
        "      <td>CHI</td>\n",
-       "      <td>44.0</td>\n",
+       "      <td>44.5</td>\n",
        "      <td>2023-09-10 16:25:00</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>2.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>4:25</td>\n",
        "      <td>LV</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-4.0</td>\n",
        "      <td>DEN</td>\n",
        "      <td>44.5</td>\n",
        "      <td>2023-09-10 16:25:00</td>\n",
@@ -745,11 +685,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>4:25</td>\n",
        "      <td>MIA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-2.5</td>\n",
        "      <td>LAC</td>\n",
        "      <td>50.0</td>\n",
        "      <td>2023-09-10 16:25:00</td>\n",
@@ -757,23 +693,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>4:25</td>\n",
        "      <td>PHI</td>\n",
-       "      <td>-4.5</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NE</td>\n",
-       "      <td>46.0</td>\n",
+       "      <td>45.0</td>\n",
        "      <td>2023-09-10 16:25:00</td>\n",
        "      <td>-4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>4:25</td>\n",
        "      <td>LA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-5.0</td>\n",
        "      <td>SEA</td>\n",
        "      <td>47.5</td>\n",
        "      <td>2023-09-10 16:25:00</td>\n",
@@ -781,11 +709,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>2023-09-10</td>\n",
-       "      <td>8:20</td>\n",
        "      <td>DAL</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NYG</td>\n",
        "      <td>46.5</td>\n",
        "      <td>2023-09-10 20:20:00</td>\n",
@@ -793,11 +717,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>2023-09-11</td>\n",
-       "      <td>8:15</td>\n",
        "      <td>BUF</td>\n",
-       "      <td>-1.5</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>NYJ</td>\n",
        "      <td>47.0</td>\n",
        "      <td>2023-09-11 20:15:00</td>\n",
@@ -808,44 +728,26 @@
        "</div>"
       ],
       "text/plain": [
-       "         date  time away_team  away_favored  home_favored home_team  total  \\\n",
-       "1  2023-09-07  8:20       DET           NaN          -7.0        KC   54.0   \n",
-       "2  2023-09-10  1:00       CAR           NaN          -3.0       ATL   42.5   \n",
-       "3  2023-09-10  1:00       HOU           NaN          -9.5       BAL   44.0   \n",
-       "4  2023-09-10  1:00       CIN          -2.0           NaN       CLE   47.5   \n",
-       "5  2023-09-10  1:00       JAX          -3.5           NaN       IND   43.5   \n",
-       "6  2023-09-10  1:00        TB           NaN          -6.5       MIN   45.5   \n",
-       "7  2023-09-10  1:00       TEN           NaN          -3.0        NO   41.5   \n",
-       "8  2023-09-10  1:00        SF          -3.0           NaN       PIT   40.5   \n",
-       "9  2023-09-10  1:00       ARI           NaN          -6.0       WAS   40.5   \n",
-       "10 2023-09-10  4:25        GB           NaN          -3.0       CHI   44.0   \n",
-       "11 2023-09-10  4:25        LV           NaN          -4.0       DEN   44.5   \n",
-       "12 2023-09-10  4:25       MIA           NaN          -2.5       LAC   50.0   \n",
-       "13 2023-09-10  4:25       PHI          -4.5           NaN        NE   46.0   \n",
-       "14 2023-09-10  4:25        LA           NaN          -5.0       SEA   47.5   \n",
-       "15 2023-09-10  8:20       DAL          -3.0           NaN       NYG   46.5   \n",
-       "16 2023-09-11  8:15       BUF          -1.5           NaN       NYJ   47.0   \n",
-       "\n",
-       "              gametime  spread  \n",
-       "1  2023-09-07 20:20:00     7.0  \n",
-       "2  2023-09-10 13:00:00     3.0  \n",
-       "3  2023-09-10 13:00:00     9.5  \n",
-       "4  2023-09-10 13:00:00    -2.0  \n",
-       "5  2023-09-10 13:00:00    -3.5  \n",
-       "6  2023-09-10 13:00:00     6.5  \n",
-       "7  2023-09-10 13:00:00     3.0  \n",
-       "8  2023-09-10 13:00:00    -3.0  \n",
-       "9  2023-09-10 13:00:00     6.0  \n",
-       "10 2023-09-10 16:25:00     3.0  \n",
-       "11 2023-09-10 16:25:00     4.0  \n",
-       "12 2023-09-10 16:25:00     2.5  \n",
-       "13 2023-09-10 16:25:00    -4.5  \n",
-       "14 2023-09-10 16:25:00     5.0  \n",
-       "15 2023-09-10 20:20:00    -3.0  \n",
-       "16 2023-09-11 20:15:00    -1.5  "
+       "   away_team home_team  total            gametime  spread\n",
+       "1        DET        KC   54.0 2023-09-07 20:20:00     7.0\n",
+       "2        CAR       ATL   42.5 2023-09-10 13:00:00     3.0\n",
+       "3        HOU       BAL   44.0 2023-09-10 13:00:00     9.5\n",
+       "4        CIN       CLE   47.5 2023-09-10 13:00:00    -1.0\n",
+       "5        JAX       IND   43.5 2023-09-10 13:00:00    -3.5\n",
+       "6         TB       MIN   45.5 2023-09-10 13:00:00     6.5\n",
+       "7        TEN        NO   41.5 2023-09-10 13:00:00     3.0\n",
+       "8         SF       PIT   40.5 2023-09-10 13:00:00    -3.0\n",
+       "9        ARI       WAS   40.0 2023-09-10 13:00:00     6.0\n",
+       "10        GB       CHI   44.5 2023-09-10 16:25:00     2.5\n",
+       "11        LV       DEN   44.5 2023-09-10 16:25:00     4.0\n",
+       "12       MIA       LAC   50.0 2023-09-10 16:25:00     2.5\n",
+       "13       PHI        NE   45.0 2023-09-10 16:25:00    -4.5\n",
+       "14        LA       SEA   47.5 2023-09-10 16:25:00     5.0\n",
+       "15       DAL       NYG   46.5 2023-09-10 20:20:00    -3.0\n",
+       "16       BUF       NYJ   47.0 2023-09-11 20:15:00    -1.5"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -853,6 +755,27 @@
    "source": [
     "schedule"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
