--- a/notebooks/elo-scrapers.ipynb
+++ b/notebooks/elo-scrapers.ipynb
@@ -9,7 +9,7 @@
     "import sys\n",
     "import os\n",
     "# Navigate up one level to the parent directory and append it to sys.path\n",
-    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), os.pardir, os.pardir)))\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), os.pardir)))\n",
     "import nfl_data_py as nfl\n",
     "import pandas as pd\n",
     "from src import utils"
@@ -17,7 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,116 +88,116 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>&amp;nbspKC</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6.2</td>\n",
+       "      <td>7.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>2</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0-1</td>\n",
-       "      <td>17</td>\n",
-       "      <td>74.9%</td>\n",
+       "      <td>2-1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>88.7%</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>14</td>\n",
+       "      <td>-1.8</td>\n",
+       "      <td>25</td>\n",
        "      <td>0.7</td>\n",
-       "      <td>5</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>&amp;nbspSF</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.6</td>\n",
+       "      <td>&amp;nbspBUF</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1-0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>92.0%</td>\n",
+       "      <td>6.5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>15</td>\n",
-       "      <td>-0.9</td>\n",
-       "      <td>27</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2-1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>78.1%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.6</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>&amp;nbspPHI</td>\n",
-       "      <td>3</td>\n",
+       "      <td>&amp;nbspSF</td>\n",
+       "      <td>4</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5.2</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>12</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2-0</td>\n",
+       "      <td>3-0</td>\n",
        "      <td>1</td>\n",
-       "      <td>89.1%</td>\n",
+       "      <td>94.9%</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-0.1</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>24</td>\n",
+       "      <td>-0.3</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>&amp;nbspDAL</td>\n",
+       "      <td>&amp;nbspMIA</td>\n",
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.3</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>9</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>20</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1-0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>81.8%</td>\n",
+       "      <td>3-0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>88.9%</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.4</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>&amp;nbspBUF</td>\n",
-       "      <td>2</td>\n",
+       "      <td>&amp;nbspPHI</td>\n",
+       "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.2</td>\n",
+       "      <td>4.8</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>6</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>9</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0-1</td>\n",
-       "      <td>17</td>\n",
-       "      <td>58.4%</td>\n",
+       "      <td>3-0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>89.8%</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>3</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -196,28 +205,28 @@
       ],
       "text/plain": [
        "   Rank      Team  LstWk  LstWk.1  GPF  GPF.1  oGPF  oGPF.1  oGPF.2  dGPF  \\\n",
-       "0     1   &nbspKC      1      NaN  6.2    NaN   5.2       1     NaN   1.0   \n",
-       "1     2   &nbspSF      5      NaN  5.8    NaN   3.2       5     NaN   2.6   \n",
-       "2     3  &nbspPHI      3      NaN  5.2    NaN   4.5       2     NaN   0.7   \n",
-       "3     4  &nbspDAL      6      NaN  4.3    NaN   2.3       9     NaN   2.0   \n",
-       "4     5  &nbspBUF      2      NaN  4.2    NaN   3.2       6     NaN   1.1   \n",
+       "0     1   &nbspKC      3      NaN  7.1    NaN   5.1       2     NaN   2.0   \n",
+       "1     2  &nbspBUF      2      NaN  6.5    NaN   4.6       3     NaN   1.9   \n",
+       "2     3   &nbspSF      4      NaN  6.0    NaN   3.4       5     NaN   2.6   \n",
+       "3     4  &nbspMIA      6      NaN  5.0    NaN   5.5       1     NaN  -0.6   \n",
+       "4     5  &nbspPHI      5      NaN  4.8    NaN   3.5       4     NaN   1.3   \n",
        "\n",
        "   dGPF.1  dGPF.2  W-L  W-L.1 Projected Seed  Projected Seed.1  pSOS  pSOS.1  \\\n",
-       "0       8     NaN  0-1     17          74.9%               NaN   0.9      14   \n",
-       "1       2     NaN  1-0      2          92.0%               NaN   0.8      15   \n",
-       "2      12     NaN  2-0      1          89.1%               NaN  -0.1      19   \n",
-       "3       4     NaN  1-0      2          81.8%               NaN  -1.0      21   \n",
-       "4       7     NaN  0-1     17          58.4%               NaN  -2.0      24   \n",
+       "0       6     NaN  2-1      4          88.7%               NaN  -1.8      25   \n",
+       "1       7     NaN  2-1      4          78.1%               NaN  -2.6      31   \n",
+       "2       4     NaN  3-0      1          94.9%               NaN  -1.5      24   \n",
+       "3      20     NaN  3-0      1          88.9%               NaN   0.1      15   \n",
+       "4       9     NaN  3-0      1          89.8%               NaN  -0.4      16   \n",
        "\n",
        "   fSOS  fSOS.1  \n",
-       "0   0.7       5  \n",
-       "1  -0.9      27  \n",
-       "2   0.0      18  \n",
-       "3   0.0      15  \n",
-       "4   0.9       3  "
+       "0   0.7       8  \n",
+       "1   1.4       1  \n",
+       "2  -0.3      18  \n",
+       "3   0.4      15  \n",
+       "4   0.6      11  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,116 +297,116 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>&amp;nbspKC</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>6.2</td>\n",
+       "      <td>7.1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>2</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0-1</td>\n",
-       "      <td>17</td>\n",
-       "      <td>74.9%</td>\n",
+       "      <td>2-1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>88.7%</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>14</td>\n",
+       "      <td>-1.8</td>\n",
+       "      <td>25</td>\n",
        "      <td>0.7</td>\n",
-       "      <td>5</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>&amp;nbspSF</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.6</td>\n",
+       "      <td>&amp;nbspBUF</td>\n",
        "      <td>2</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1-0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>92.0%</td>\n",
+       "      <td>6.5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>15</td>\n",
-       "      <td>-0.9</td>\n",
-       "      <td>27</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2-1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>78.1%</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.6</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>&amp;nbspPHI</td>\n",
-       "      <td>3</td>\n",
+       "      <td>&amp;nbspSF</td>\n",
+       "      <td>4</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5.2</td>\n",
+       "      <td>6.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>12</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2-0</td>\n",
+       "      <td>3-0</td>\n",
        "      <td>1</td>\n",
-       "      <td>89.1%</td>\n",
+       "      <td>94.9%</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-0.1</td>\n",
-       "      <td>19</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>24</td>\n",
+       "      <td>-0.3</td>\n",
        "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>&amp;nbspDAL</td>\n",
+       "      <td>&amp;nbspMIA</td>\n",
        "      <td>6</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.3</td>\n",
+       "      <td>5.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>9</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>1</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>20</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1-0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>81.8%</td>\n",
+       "      <td>3-0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>88.9%</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.4</td>\n",
        "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>&amp;nbspBUF</td>\n",
-       "      <td>2</td>\n",
+       "      <td>&amp;nbspPHI</td>\n",
+       "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>4.2</td>\n",
+       "      <td>4.8</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>6</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>9</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0-1</td>\n",
-       "      <td>17</td>\n",
-       "      <td>58.4%</td>\n",
+       "      <td>3-0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>89.8%</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>24</td>\n",
-       "      <td>0.9</td>\n",
-       "      <td>3</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -405,21 +414,21 @@
       ],
       "text/plain": [
        "   rank      team  lstwk  lstwk1  gpf  gpf1  ogpf  ogpf1  ogpf2  dgpf  dgpf1  \\\n",
-       "0     1   &nbspKC      1     NaN  6.2   NaN   5.2      1    NaN   1.0      8   \n",
-       "1     2   &nbspSF      5     NaN  5.8   NaN   3.2      5    NaN   2.6      2   \n",
-       "2     3  &nbspPHI      3     NaN  5.2   NaN   4.5      2    NaN   0.7     12   \n",
-       "3     4  &nbspDAL      6     NaN  4.3   NaN   2.3      9    NaN   2.0      4   \n",
-       "4     5  &nbspBUF      2     NaN  4.2   NaN   3.2      6    NaN   1.1      7   \n",
+       "0     1   &nbspKC      3     NaN  7.1   NaN   5.1      2    NaN   2.0      6   \n",
+       "1     2  &nbspBUF      2     NaN  6.5   NaN   4.6      3    NaN   1.9      7   \n",
+       "2     3   &nbspSF      4     NaN  6.0   NaN   3.4      5    NaN   2.6      4   \n",
+       "3     4  &nbspMIA      6     NaN  5.0   NaN   5.5      1    NaN  -0.6     20   \n",
+       "4     5  &nbspPHI      5     NaN  4.8   NaN   3.5      4    NaN   1.3      9   \n",
        "\n",
        "   dgpf2   wl  wl1 projected_seed  projected_seed1  psos  psos1  fsos  fsos1  \n",
-       "0    NaN  0-1   17          74.9%              NaN   0.9     14   0.7      5  \n",
-       "1    NaN  1-0    2          92.0%              NaN   0.8     15  -0.9     27  \n",
-       "2    NaN  2-0    1          89.1%              NaN  -0.1     19   0.0     18  \n",
-       "3    NaN  1-0    2          81.8%              NaN  -1.0     21   0.0     15  \n",
-       "4    NaN  0-1   17          58.4%              NaN  -2.0     24   0.9      3  "
+       "0    NaN  2-1    4          88.7%              NaN  -1.8     25   0.7      8  \n",
+       "1    NaN  2-1    4          78.1%              NaN  -2.6     31   1.4      1  \n",
+       "2    NaN  3-0    1          94.9%              NaN  -1.5     24  -0.3     18  \n",
+       "3    NaN  3-0    1          88.9%              NaN   0.1     15   0.4     15  \n",
+       "4    NaN  3-0    1          89.8%              NaN  -0.4     16   0.6     11  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,20 +439,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inp_df.to_csv('../../data/inpredictable/inpredictable-wk2.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pd.read_html('https://sumersports.com/league-table/')"
+    "inp_df.to_csv(f'../../data/inpredictable/inpredictable-wk{week}.csv')"
    ]
   },
   {
@@ -452,18 +452,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
+    "# import requests\n",
+    "# from bs4 import BeautifulSoup\n",
     "\n",
     "\n",
-    "HEADERS = {'User-Agent': 'Mozilla/5.0 (iPad; CPU OS 12_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148'}\n",
+    "# HEADERS = {'User-Agent': 'Mozilla/5.0 (iPad; CPU OS 12_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Mobile/15E148'}\n",
     "\n",
-    "response = requests.get('https://sumersports.com/league-table/', headers=HEADERS)"
+    "# response = requests.get('https://sumersports.com/league-table/', headers=HEADERS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sumer_backup.to_csv('../../data/sumer/sumer-elo-wk2.csv')"
+    "sumer_backup.to_csv(f'../../data/sumer/sumer-elo-wk{week}.csv')"
    ]
   },
   {
