--- a/notebooks/homers-analysis.ipynb
+++ b/notebooks/homers-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14708,7 +14708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14717,16 +14717,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "individual = df[(df['season']==SEASON) & (df['week'] == WEEK) & (df['picker'] != 'final') & (df['spread_pick'])].copy()"
+    "individual = df[(df['season']==SEASON) & (df['week'] == WEEK) & (df['picker'] != 'final') & (df['spread_pick']) & (~df['mnf_pick'])].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14735,7 +14735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -15072,54 +15072,6 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1885</th>\n",
-       "      <td>griffin</td>\n",
-       "      <td>NYG</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2023_04_SEA_NYG</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NYG</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-21.0</td>\n",
-       "      <td>-2.5</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1886</th>\n",
-       "      <td>chuck</td>\n",
-       "      <td>NYG</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2023_04_SEA_NYG</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NYG</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-21.0</td>\n",
-       "      <td>-2.5</td>\n",
-       "      <td>False</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1888</th>\n",
        "      <td>hunter</td>\n",
        "      <td>CIN</td>\n",
@@ -15165,78 +15117,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1893</th>\n",
-       "      <td>hunter</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2023_04_SEA_NYG</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NYG</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-21.0</td>\n",
-       "      <td>-2.5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1894</th>\n",
-       "      <td>harry</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2023_04_SEA_NYG</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NYG</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-21.0</td>\n",
-       "      <td>-2.5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1895</th>\n",
-       "      <td>ben</td>\n",
-       "      <td>SEA</td>\n",
-       "      <td>2023</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>2023_04_SEA_NYG</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NYG</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>-21.0</td>\n",
-       "      <td>-2.5</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -15625,7 +15505,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>35 rows × 21 columns</p>\n",
+       "<p>30 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -15642,13 +15522,8 @@
        "1881    harry  IND    2023     4         True     False          False   \n",
        "1882  griffin  DAL    2023     4         True     False          False   \n",
        "1883    chuck  DAL    2023     4         True     False          False   \n",
-       "1885  griffin  NYG    2023     4         True     False          False   \n",
-       "1886    chuck  NYG    2023     4         True     False          False   \n",
        "1888   hunter  CIN    2023     4         True     False          False   \n",
        "1889      ben  CIN    2023     4         True     False          False   \n",
-       "1893   hunter  SEA    2023     4         True     False          False   \n",
-       "1894    harry  SEA    2023     4         True     False          False   \n",
-       "1895      ben  SEA    2023     4         True     False          False   \n",
        "1896   hunter   KC    2023     4         True     False          False   \n",
        "1897  griffin   KC    2023     4         True      True          False   \n",
        "1898    chuck   KC    2023     4         True     False          False   \n",
@@ -15679,13 +15554,8 @@
        "1881          False     False   2023_04_LA_IND  ...       IND       29.0   \n",
        "1882          False     False   2023_04_NE_DAL  ...       DAL        3.0   \n",
        "1883          False     False   2023_04_NE_DAL  ...       DAL        3.0   \n",
-       "1885          False      True  2023_04_SEA_NYG  ...       NYG       24.0   \n",
-       "1886          False      True  2023_04_SEA_NYG  ...       NYG       24.0   \n",
        "1888          False     False  2023_04_CIN_TEN  ...       TEN        3.0   \n",
        "1889          False     False  2023_04_CIN_TEN  ...       TEN        3.0   \n",
-       "1893          False      True  2023_04_SEA_NYG  ...       NYG       24.0   \n",
-       "1894          False      True  2023_04_SEA_NYG  ...       NYG       24.0   \n",
-       "1895          False      True  2023_04_SEA_NYG  ...       NYG       24.0   \n",
        "1896          False     False   2023_04_KC_NYJ  ...       NYJ       23.0   \n",
        "1897          False     False   2023_04_KC_NYJ  ...       NYJ       23.0   \n",
        "1898          False     False   2023_04_KC_NYJ  ...       NYJ       23.0   \n",
@@ -15716,13 +15586,8 @@
        "1881        23.0    -6.0         -1.0      False         1.0         0.0   \n",
        "1882        38.0    35.0          6.5      False         0.0         1.0   \n",
        "1883        38.0    35.0          6.5      False         0.0         1.0   \n",
-       "1885         3.0   -21.0         -2.5      False         1.0         0.0   \n",
-       "1886         3.0   -21.0         -2.5      False         1.0         0.0   \n",
        "1888        27.0    24.0         -2.5       True         0.0         1.0   \n",
        "1889        27.0    24.0         -2.5       True         0.0         1.0   \n",
-       "1893         3.0   -21.0         -2.5       True         1.0         0.0   \n",
-       "1894         3.0   -21.0         -2.5       True         1.0         0.0   \n",
-       "1895         3.0   -21.0         -2.5       True         1.0         0.0   \n",
        "1896        20.0    -3.0         -9.5       True         0.0         1.0   \n",
        "1897        20.0    -3.0         -9.5       True         0.0         1.0   \n",
        "1898        20.0    -3.0         -9.5       True         0.0         1.0   \n",
@@ -15753,13 +15618,8 @@
        "1881          0.0                1  \n",
        "1882          1.0                1  \n",
        "1883          1.0                1  \n",
-       "1885          0.0                1  \n",
-       "1886          0.0                1  \n",
        "1888          0.0                1  \n",
        "1889          0.0                1  \n",
-       "1893          1.0                1  \n",
-       "1894          1.0                1  \n",
-       "1895          1.0                1  \n",
        "1896          0.0                1  \n",
        "1897          0.0                2  \n",
        "1898          0.0                1  \n",
@@ -15777,10 +15637,10 @@
        "1914          0.0                1  \n",
        "1915          0.5                1  \n",
        "\n",
-       "[35 rows x 21 columns]"
+       "[30 rows x 21 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15791,7 +15651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -15816,60 +15676,211 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>pick</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pick</th>\n",
-       "      <th></th>\n",
+       "      <th>spread_pick</th>\n",
+       "      <th>best_bet</th>\n",
+       "      <th>weighted_consensus</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>BUF</th>\n",
+       "      <th>2</th>\n",
+       "      <td>BUF</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>KC</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>LA</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>SEA</th>\n",
+       "      <th>5</th>\n",
+       "      <td>CLE</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>KC</th>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TB</th>\n",
+       "      <th>18</th>\n",
+       "      <td>TB</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CIN</th>\n",
+       "      <th>4</th>\n",
+       "      <td>CIN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>CLE</th>\n",
+       "      <th>6</th>\n",
+       "      <td>DAL</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>NE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BAL</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ARI</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>PIT</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>MIN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>MIA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>IND</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>JAX</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>HOU</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>GB</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CAR</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>WAS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      pick\n",
-       "pick      \n",
-       "BUF      3\n",
-       "SEA      3\n",
-       "KC       3\n",
-       "TB       2\n",
-       "CIN      2\n",
-       "CLE      2"
+       "   pick  spread_pick  best_bet  weighted_consensus\n",
+       "2   BUF            3         1                   4\n",
+       "12   KC            3         1                   4\n",
+       "13   LA            2         1                   3\n",
+       "5   CLE            2         1                   3\n",
+       "18   TB            2         0                   2\n",
+       "4   CIN            2         0                   2\n",
+       "6   DAL            2         0                   2\n",
+       "16   NE            1         1                   2\n",
+       "1   BAL            2         0                   2\n",
+       "0   ARI            1         0                   1\n",
+       "17  PIT            1         0                   1\n",
+       "15  MIN            1         0                   1\n",
+       "14  MIA            1         0                   1\n",
+       "10  IND            1         0                   1\n",
+       "11  JAX            1         0                   1\n",
+       "9   HOU            1         0                   1\n",
+       "8    GB            1         0                   1\n",
+       "7   DEN            1         0                   1\n",
+       "3   CAR            1         0                   1\n",
+       "19  WAS            1         0                   1"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "consensus = individual.groupby('pick')['pick'].count().sort_values(ascending=False).to_frame().head(6).rename(columns={'pick'})\n",
+    "consensus = individual.groupby('pick')[['spread_pick', 'best_bet']].sum().reset_index(level=0)\n",
+    "consensus['weighted_consensus'] = consensus['spread_pick'] + consensus['best_bet']\n",
+    "consensus = consensus.sort_values(by='weighted_consensus', ascending=False)\n",
     "consensus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "import_schedules() got an unexpected keyword argument 'season'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/griffinreichert/Documents/code/g/nfl-betting/notebooks/homers-analysis.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/griffinreichert/Documents/code/g/nfl-betting/notebooks/homers-analysis.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m nfl\u001b[39m.\u001b[39;49mimport_schedules(season\u001b[39m=\u001b[39;49m[\u001b[39m2023\u001b[39;49m])\n",
+      "\u001b[0;31mTypeError\u001b[0m: import_schedules() got an unexpected keyword argument 'season'"
+     ]
+    }
+   ],
+   "source": [
+    "nfl.import_schedules(seasons=[2023])"
    ]
   },
   {
